SD2024/tif/cloud-shared-services/argocd/root-project/tools/whoami/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami
 namespace: whoami
 annotations:
   cert-manager.io/issuer: "le-example-http"
spec:
 tls:
   - hosts:
       - whoami.10.net.ar
     secretName: tls-whoami-ingress-http
 rules:
   - host: whoami.10.net.ar
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
