SD2024/tif/cloud-shared-services/argocd/root-project/tools/whoami/04-dashboard.yaml
# dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dashboard.10.net.ar`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: le
